<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:transitionName="menuDifficultyContainer"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    tools:context=".views.mainMenu.MainMenuActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/goBackButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|left"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:fontFamily="@font/mainfonts"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/levelChooserTitle"
            android:textColor="@android:color/black"
            android:textSize="27sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/fragmentAboutMeContentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/menuLevel1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mainfonts"
                        android:gravity="center"
                        android:text="@string/levelDifficultyEasy"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/menuDifficultyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mainfonts"
                        android:gravity="center"
                        android:text="@string/levelDifficultyMedium"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/menuDifficultyHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mainfonts"
                        android:gravity="center"
                        android:text="@string/levelDifficultyHard"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>


</com.google.android.material.card.MaterialCardView>